--- a/ReminderWebApp/ReminderWebApp.csproj
+++ b/ReminderWebApp/ReminderWebApp.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Include="wwwroot\css\calendar.css" />
+    <None Include="wwwroot\js\calendar.js" />
+  </ItemGroup>
+
 </Project>
