--- a/ReminderWorkerService/appsettings.json
+++ b/ReminderWorkerService/appsettings.json
@@ -2,10 +2,21 @@
   "ConnectionStrings": {
     "DefaultConnection": "workstation id=ReminderNextopDB.mssql.somee.com;packet size=4096;user id=Nextop05_SQLLogin_1;pwd=75cl9fqk7c;data source=ReminderNextopDB.mssql.somee.com;persist security info=False;initial catalog=ReminderNextopDB;TrustServerCertificate=True"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+      "Override": {
+        "Microsoft": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "rollingInterval": "Day",
+          "path": "logs/log-.txt",
+        }
+      }
+    ]
   }
 }
