Ряд улучшений и исправлений

--- a/ReminderWorkerService/appsettings.json
+++ b/ReminderWorkerService/appsettings.json
@@ -16,6 +16,9 @@
           "rollingInterval": "Day",
           "path": "logs/log-.txt",
         }
+      },
+      {
+        "Name": "Console"
       }
     ]
   }
